--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="https://public-frontend-cos.metadl.com/mgx/img/favicon.png" type="image/png">
+  <link rel="icon" href="https://media.ghlcdn.com/tuopath/favicon.svg" type="image/svg">
   <title>VendorAI Automation - Smetti di Perdere Clienti Ogni Giorno</title>
   <meta name="description" content="Automatizza i tuoi processi e gestione appuntamenti. Scopri quanto stai perdendo senza automazione e prenota la tua call gratuita." />
   <meta name="author" content="VendorAI" />
